fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,10 +72,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-
-    /* Tags */
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
+    --card: oklch(0.205 0 0);
+    --card-foreground: oklch(0.985 0 0);
+    /* Tags */
     --tag-default: rgba(var(--ultralight-gray), 0.1);
     --card-default: var(--blue-gray);
   }
